--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
   <meta charset="UTF-8">
   <title>LC BibleApp-02</title>
   <!-- <script src="data/bible.js"></script> -->
-  <style id="verse_alignement">.verse {display: block;}</style>
+  <style id="verse_alignement">
+    .verse {
+      display: block;
+    }
+  </style>
   <link rel="stylesheet" href="bibleApp.css">
 </head>
 
 <body>
+
   <div id="pagemaster">
     <div class="buttons">
       <button onclick="toggleNav()" class="togglenav" id="togglenavbtn" title="Toggle Nav">&#9776;</button>
       <!-- <button onclick="showStrongs(this)" class="showing" title="Show Strongs"><b>s+</b><button onclick="showTransliteration()" id="translit"class="translit" title="Transliteration"><b>T</b></button> -->
       <!-- <button onclick="savefile('p#text')" class="footersection" id="filesaver">Download
         <button onclick="makeContentEditable()" class="footersection" id="btnfootcontenteditable"title="Make page editable">EditPage -->
-      <div id="refdiv">
-        <input class="footersection" id="reference" title="Type Bible Reference"
-          placeholder="Type Bible Reference"></input><button onclick="gotoRef()" class="footersection" id="forreference" title="go to reference">GO</button>
+      <div id="ref_search_versions_holder">
+        <div id="refdiv">
+          <input class="footersection" id="reference" title="Type Bible Reference"
+            placeholder="Type Bible Reference"></input><button onclick="gotoRef()" class="footersection"
+            id="forreference" title="go to reference">...</button>
         </div>
-      <div id="searchdiv">
-        <input class="footersection" id="wordsearch" title="What to search for"
-          placeholder="Type Words to Search For"></input><button onclick="runWordSearch()" class="footersection" id="forwordsearch" title="Run Search"
-            disabled>...</button>
+        <div id="searchdiv">
+          <input class="footersection" id="wordsearch" title="What to search for"
+            placeholder="Type Words to Search For"></input><button onclick="runWordSearch()" class="footersection"
+            id="forwordsearch" title="Run Search" disabled>...</button>
         </div>
-      <div id="bibleversions_btns">
+        <div id="bibleversions_btns">
           <!-- <button><input type="checkbox" id="bv_KJV_chk" name="bv_KJV_chk" value="bv_KJV_chk" checked>KJV</button> -->
         </div>
+      </div>
     </div>
 
     <div id="mobilebuttons">
@@ -103,6 +111,9 @@
       </div>
     </nav>
     <main id="main" contenteditable="false">
+      
+      <div id="context_menu" class="context_menu slideout">Hello there, how are you doing today. GOD bless you.</div>
+      <!-- <div class="context_menu slideout">Hello there, how are you doing today. GOD bless you.</div> -->
       <div id="ppp"></div>
       <!-- <div id="pp3">asasdfasdf adsf adsfa dsf asdf asdfads fasdf ads dfhjfhjkgkhltdystfgdsv bsgdhjkhgkjmdfgxzgafdshgsdgvfsdgherhfnd bnf gdgfhs ghbsdfgsdfhg efgdjfxj s</div>
         <div id="search_section">adfadfadsfasdfadsf</div> -->
@@ -124,6 +135,7 @@
   </div>
 </body>
 <!-- <script src="data/KJV.js"></script> -->
+<script src="script.js/helpers.js"></script>
 <script src="data/bible.js"></script>
 <script src="script.js/bibleApp_versionsLoader.js"></script>
 <script src="script.js/bibleApp_generateScriptureReference.js"></script>
@@ -135,5 +147,8 @@
 <script src="script.js/bibleApp_search.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_chapterNameOnScroll.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteration.js" charset="utf-8"></script>
+<!-- <script src="script.js/TSK.js" charset="utf-8"></script> -->
+<script src="data/crossReferences.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
 
 </html>
