link to ContextMenu in separate file

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
   </div>
 </body>
 <!-- <script src="data/KJV.js"></script> -->
-<script src="script.js/helpers.js"></script>
 <script src="data/bible.js"></script>
+<script src="script.js/helpers.js"></script>
+<script src="script.js/bibleApp_contextMenu.js"></script>
 <script src="script.js/bibleApp_versionsLoader.js"></script>
 <script src="script.js/bibleApp_generateScriptureReference.js"></script>
 <script src="script.js/bibleApp_refNav.js"></script>
