Cross reference; Context menu

--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 <!-- <script src="data/KJV.js"></script> -->
 <script src="data/bible.js"></script>
 <script src="script.js/helpers.js"></script>
+<!-- <script src="data/crossReferences.js" charset="utf-8"></script> -->
+<script src="data/bibleApp_reKeyedCrossReference.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_contextMenu.js"></script>
 <script src="script.js/bibleApp_versionsLoader.js"></script>
 <script src="script.js/bibleApp_generateScriptureReference.js"></script>
@@ -210,5 +212,4 @@
 <script src="data/crossReferences.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
-
 </html>
