--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
             </tr>
           </table>
         </div>
-        <div>
-          Toggle Dark/Light Mode: <button id="darkmodebtn" onclick="darkLightMode()">L</button>
-        </div>
+        <div>Toggle Dark/Light Mode: <button id="darkmodebtn" onclick="darkLightMode()">L</button></div>
+        <div>Hide/Show Highlights: <button id="hidestrongshighlight" onclick="hide_strongshighlight()">hl</button></div>
       </div>
       <div id="strongsdefinitionwindow" class="slideout">
       </div>
@@ -168,9 +167,9 @@
       </div>
     </nav>
     <div id="singleverse_compare_menu" class="slideout"></div>
-    <main id="main" contenteditable="false">
-
-      <div id="context_menu" class="context_menu slideout"></div>
+          
+          <main id="main" contenteditable="false">
+            <div id="context_menu" class="context_menu slideout"></div>
       <!-- <div class="context_menu slideout">Hello there, how are you doing today. GOD bless you.</div> -->
       <div id="ppp"></div>
       <!-- <div id="pp3">asasdfasdf adsf adsfa dsf asdf asdfads fasdf ads dfhjfhjkgkhltdystfgdsv bsgdhjkhgkjmdfgxzgafdshgsdgvfsdgherhfnd bnf gdgfhs ghbsdfgsdfhg efgdjfxj s</div>
@@ -197,6 +196,7 @@
 <script src="script.js/helpers.js"></script>
 <!-- <script src="data/crossReferences.js" charset="utf-8"></script> -->
 <script src="data/bibleApp_reKeyedCrossReference.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_crossRefrencer.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_contextMenu.js"></script>
 <script src="script.js/bibleApp_versionsLoader.js"></script>
 <script src="script.js/bibleApp_generateScriptureReference.js"></script>
@@ -212,4 +212,5 @@
 <script src="data/crossReferences.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
+<script>tool_tip.click()</script>
 </html>
