--- a/index.html
+++ b/index.html
@@ -212,5 +212,6 @@
 <script src="data/crossReferences.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_transliteratorGreek.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_ref_browserHistory.js" charset="utf-8"></script>
+<script src="script.js/bibleApp_versionHighlight.js" charset="utf-8"></script>
 <script>tool_tip.click()</script>
 </html>
