--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>LC BibleApp-02</title>
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
-
+  <script src="https://cdn.ckeditor.com/4.20.0/standard-all/ckeditor.js"></script>
+  <!-- <script src="/ckeditor/ckeditor.js"></script> -->
 <style id="verse_alignement">
     .verse {
       display: block;
@@ -20,7 +21,6 @@
     <div class="note_edit_button" id="note_edit_button" title="edit verse note"><img src="images\edit-svgrepo-com.svg" alt="🖉" ></div>
 
     <div id="toolbar">
-      <button id="bold">bold</button><button id="italic">italic</button><button id="h1">H1</button><button id="p">P</button>
     </div>
     
     <!--element to edit-->
@@ -227,4 +227,5 @@
 <script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
 <script>tool_tip.click()</script>
 
+<script src="samsTextEditor/samsTextEditor.js" charset="utf-8"></script>
 </html>
