--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
     <nav id="refnav" class="slideout" style="display:block">
       <div class="refnav" name="settings" id="app_settings" multiple>
         <button id="biblenavigation" class="active_button" onclick="hideRefNav(null, bible_nav)" title="Bible Navigation"><img src="images\books-stack-svgrepo-com.svg" alt="☰" ></button>
-        <button id="bibles" onclick="hideRefNav(null, bible_versions)" title="Bible Versions"><img src="images\books-stack-svgrepo-com.svg" alt="&#128218;" ></button>
+        <button id="bibles" onclick="hideRefNav(null, bible_versions)" title="Bible Versions"><img src="images\knowledge-base-svgrepo-com.svg" alt="&#128218;" ></button>
         <!-- <button id="versealignment" onclick="changeVerseAlignment()" title="verses alignment">V</button> -->
         <button id="searchsettings" onclick="hideRefNav(null, searchPreviewWindowFixed)" title="word(s) search"><img src="images\search-svgrepo-com(2).svg" alt="search" ></button>
         </button>
-        <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)"
-          title="Show strongs definition window">Str</button>
+        <button id="open_strongsdefinitionwindow" onclick="hideRefNav(null, strongsdefinitionwindow)" title="Show strongs definition window">Str+</button>
         <button id="cachesettings" onclick="hideRefNav(null, bibleapp_cache)" title="cache settings"><img src="images\settings-svgrepo-com.svg" alt="&#9881;" ></button><!-- &#9881; 🛠-->
       </div>
       <div id="bible_nav" class="refnav slidein">
