fontsize_main changeable

--- a/index.html
+++ b/index.html
@@ -148,19 +148,28 @@
             <tr>
               <td>Refrence Text</td>
               <td>
-                <button id="decrease_fontsize" onclick="changeFontSize('ref_text','minus')">-</button>
+                <button class="decrease_fontsize" onclick="changeFontSize('ref_text','minus')">-</button>
               </td>
               <td>
-              <button id="increase_fontsize" onclick="changeFontSize('ref_text','plus')">+</button>
+              <button class="increase_fontsize" onclick="changeFontSize('ref_text','plus')">+</button>
               </td>
             </tr>
             <tr>
               <td>Strongs Tool Tip</td>
               <td>
-                <button id="decrease_fontsize" onclick="changeFontSize('strongs_tooltip','minus')">-</button>
+                <button class="decrease_fontsize" onclick="changeFontSize('strongs_tooltip','minus')">-</button>
               </td>
               <td>
-              <button id="increase_fontsize" onclick="changeFontSize('strongs_tooltip','plus')">+</button>
+              <button class="increase_fontsize" onclick="changeFontSize('strongs_tooltip','plus')">+</button>
+              </td>
+            </tr>
+            <tr>
+              <td>Main Font Size</td>
+              <td>
+                <button class="decrease_fontsize" onclick="changeFontSize('main_font','minus')">-</button>
+              </td>
+              <td>
+              <button class="increase_fontsize" onclick="changeFontSize('main_font','plus')">+</button>
               </td>
             </tr>
           </table>
