--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
               </td>
             </tr>
             <tr>
+              <td>Bible Nav</td>
+              <td>
+                <button class="decrease_fontsize" onclick="changeFontSize('bible_nav','minus')">-</button>
+              </td>
+              <td>
+              <button class="increase_fontsize" onclick="changeFontSize('bible_nav','plus')">+</button>
+              </td>
+            </tr>
+            <tr>
               <td>Main Font Size</td>
               <td>
                 <button class="decrease_fontsize" onclick="changeFontSize('main_font','minus')">-</button>
