Still working on the indexedDB.
VerseNotes now recording well.

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     <main id="main" contenteditable="false">
       <div id="context_menu" class="context_menu slideout"></div>
       <div id="show_crossref_comments" class="slideout">
-        <button class="buttons" id="verse_crossref_button"><a>TSK</a></button>
-        <button class="buttons" id="verse_notes_button"><a>Note</a></button>
+        <button class="buttons" id="verse_crossref_button">TSK</button>
+        <button class="buttons" id="verse_notes_button">Note</button>
       </div>
       <div id="ppp"></div>
         <!-- <div id="search_section">adfadfadsfasdfadsf</div> -->
